<resources>
    <string name="app_name">AdFitness</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Bienvenue Sur AdFitness</string>
    <string name="welcome_msg">L\'application AdFitness - gratuite et pour tous.</string>
    <string name="our_club">Notre Club</string>
    <string name="our_courses">Nos Cours</string>
    <string name="join_message">Rejoigner nos cours collectifs en reservant votre place depuis votre smartphone</string>
    <string name="skip">SKIP</string>
    <string name="username_hint"> Nom d\'utilisateur</string>
    <string name="usernameOrEmail_hint"> Nom d\'utilisateur Ou Adresse Email</string>
    <string name="email_hint"> Adresse Email</string>
    <string name="password_hint"> Mot de passe</string>
    <string name="firstName_hint"> Nom</string>
    <string name="lastName_hint"> Prénom </string>
    <string name="phone_hint"> Numéro de téléphone</string>
    <string name="weight_hint">Poids</string>
    <string name="height_hint">Taille</string>
    <string name="birthday_hint"> Date de naissance </string>
    <string name="sign_in_with_facebook">Connectez-vous avec Facebook</string>
    <string name="sign_in_with_twitter">Connectez-vous avec Twitter</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="new_here_sign_up">Nouveau ici? S\'inscrire</string>
    <string name="home">Accueil</string>
    <string name="personal_trainer">COACHY LIVE</string>
    <string name="my_course">Mes Cours</string>
    <string name="setting">Réglages</string>
    <string name="extra_1">Extra One</string>
    <string name="extra_2">Extra Two</string>
    <string name="extra_3">Extra Three</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="default_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="password_error">Le mot de passe doit avoir plus de 6 caractères</string>
    <string name="invalid_usernameOrEmail">Nom d\'utilisateur ou Adresse Email invalide</string>
    <string name="invalid_username">Nom d\'utilisateur  invalide</string>
    <string name="username_already_exist">Nom d\'utilisateur existe déjà</string>
    <string name="email_already_exist">Adresse Email existe déjà</string>
    <string name="invalid_email">Adresse Email invalide</string>
    <string name="invalid_phone">Numero invalide</string>
    <string name="invalid_birthday">Date de naissance invalide</string>
    <string name="invalid_firstName">Nom invalide</string>
    <string name="invalid_lastName">Prénom invalide</string>
    <string name="search_title">Chercher</string>
    <string name="search_hint">Chercher</string>
    <string name="logout">Déconnexion</string>

    <string name="BMI_hint">Votre IMC</string>
    <string name="BMI_default">21</string>
    <string name="BMI_VeryVeryUnderweight">Famine ou Dénutrition</string>
    <string name="BMI_VeryUnderweight">Famine ou Dénutrition</string>
    <string name="BMI_Underweight">Maigreur</string>
    <string name="BMI_NormalWeight">Corpulence normale</string>
    <string name="BMI_Overweight">surpoids</string>
    <string name="BMI_ObesityI">obésité modérée</string>
    <string name="BMI_ObesityII">obésité sévère</string>
    <string name="BMI_ObesityIII">Obésite Morbide ou Massive</string>
    <string name="title_activity_edit_profile">EditProfile</string>

</resources>
