<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <group>

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/home"
            android:checked="true"
            android:title="@string/home" />

        <item
            android:id="@+id/action_our_club"
            android:icon="@drawable/our_club"
            android:title="@string/our_club" />
        <item
            android:id="@+id/action_our_courses"
            android:icon="@drawable/our_courses"
            android:title="@string/our_courses" />
        <item
            android:id="@+id/action_my_courses"
            android:icon="@drawable/my_courses"
            android:title="@string/my_course" />
        <item
            android:id="@+id/action_live_training"
            android:icon="@drawable/personal_trainer"
            android:title="@string/personal_trainer" />

        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/settings"
            android:title="@string/setting" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/exit"
            android:title="@string/logout" />
        </group>

    </group>
</menu>