<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.as.AdFitness.SignUpActivity">


    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/authscreen"/>

    <!-- Overlay for background image -->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackOverlay"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <!-- App Logo -->
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/thumb"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"/>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/auth_editview_upper"
                android:hint="@string/firstName_hint"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/auth_editview_upper"
                android:hint="@string/lastName_hint"
                android:inputType="textPersonName"
                android:padding="15dp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/username_hint"
            android:drawableLeft="@drawable/user"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"


            android:inputType="textCapSentences"
            android:background="@drawable/edittext_field_middle" />




        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/email"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"

            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/password_hint"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"

            android:inputType="textPassword"
            android:background="@drawable/edittext_field_middle"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_field_middle"
            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:padding="15dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_editview_lower"
            android:drawableLeft="@drawable/calendar"
            android:drawableStart="@drawable/calendar"
            android:drawablePadding="10dp"
            android:hint="@string/birthday_hint"
            android:inputType="date"
            android:padding="15dp" />

        <!-- Custom Sign In Button -->

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/signUpBtn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_button_radius"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="Sign Up"/>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>
