<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.as.AdFitness.fragments.ProfileFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="TODO" android:scaleType="centerCrop"
            android:background="@drawable/profile_bg"/>


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/user_img_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/avatar"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            />

        <android.support.v7.widget.LinearLayoutCompat
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/user_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Martha Harris"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/birthday_hint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/user_birthday_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/birthday_hint"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/phone_hint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/user_phone_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/birthday_hint"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/weight_hint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/user_weight_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/weight_hint"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </android.support.v7.widget.LinearLayoutCompat>

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/height_hint" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/user_height_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/height_hint"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
